--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "daisyui": "^2.15.1",
     "next": "12.1.6",
     "postcss": "^8.4.14",
     "react": "18.1.0",
