--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.7",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9",
     "daisyui": "^2.15.1",
     "next": "12.1.6",
-    "postcss": "^8.4.14",
+    "postcss": "^7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -24,6 +25,7 @@
     "@storybook/addon-essentials": "^6.5.5",
     "@storybook/addon-interactions": "^6.5.5",
     "@storybook/addon-links": "^6.5.5",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.5",
     "@storybook/manager-webpack5": "^6.5.5",
     "@storybook/react": "^6.5.5",
@@ -31,6 +33,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "18.0.9",
     "babel-loader": "^8.2.5",
+    "storybook-addon-next": "^1.6.4",
     "typescript": "4.6.4"
   }
 }
