--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9",
     "daisyui": "^2.15.1",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "postcss": "^7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
