--- a/package.json
+++ b/package.json
@@ -7,21 +7,29 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
     "daisyui": "^2.15.1",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
+    "next-urql": "^3.3.2",
     "postcss": "^7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "react-is": "^18.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "urql": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript-operations": "2.4.0",
+    "@graphql-codegen/typescript-urql": "^3.5.10",
     "@storybook/addon-actions": "^6.5.5",
     "@storybook/addon-essentials": "^6.5.5",
     "@storybook/addon-interactions": "^6.5.5",
@@ -35,6 +43,8 @@
     "@types/react": "18.0.9",
     "babel-loader": "^8.2.5",
     "storybook-addon-next": "^1.6.4",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "@graphql-codegen/urql-introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.11"
   }
 }
