--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.11",
     "@graphql-codegen/typescript-operations": "2.4.0",
     "@graphql-codegen/typescript-urql": "^3.5.10",
+    "@graphql-codegen/urql-introspection": "2.1.1",
     "@storybook/addon-actions": "^6.5.5",
     "@storybook/addon-essentials": "^6.5.5",
     "@storybook/addon-interactions": "^6.5.5",
@@ -42,9 +44,8 @@
     "@types/node": "^17.0.35",
     "@types/react": "18.0.9",
     "babel-loader": "^8.2.5",
+    "sass": "^1.53.0",
     "storybook-addon-next": "^1.6.4",
-    "typescript": "4.6.4",
-    "@graphql-codegen/urql-introspection": "2.1.1",
-    "@graphql-codegen/typescript": "2.4.11"
+    "typescript": "4.6.4"
   }
 }
