--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-is": "^18.1.0",
+    "swr": "^1.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "urql": "^2.2.1"
   },
